@@ -1,3 +1,10 @@
+2006-11-03  Sven Neumann  <sven@gimp.org>
+
+	* modules/cdisplay_lcms.c: update the configuration dialog when
+	then color configuration is changed.
+
+	* plug-ins/common/lcms.c: be even more robust.
+
 2006-11-03  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpcoloreditor.c
